--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "react-jianshu",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "antd": "^3.20.3",
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
     "react-scripts": "2.1.8",
     "react-transition-group": "^4.2.1",
@@ -29,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-router-dom": "^5.0.1"
+  }
 }
